ODP-5265 : Fix compilation on JDK 11 by replacing getFirst() with get(0) in TestParquetReader.java